syntax = "proto3";
option java_package = "com.mt.hbase.chpt08.coprocessor.generated";
option java_outer_classname = "SumDTO";
option java_generic_services = true;
option java_generate_equals_and_hash = true;

message SumRequest {
    string family = 1;
    string column = 2;
}

message SumResponse {
    int64 sum = 1;
}

service SumService {
  rpc getSum(SumRequest)
    returns (SumResponse);
}
